--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -22,7 +22,6 @@ body{
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
-    overscroll-behavior-y: none;
 }
 
 .bottom-left-triangle{
@@ -31,8 +30,6 @@ body{
     bottom: 0px;
     transform: scale(.7);
     transform-origin: bottom left;
-    overscroll-behavior-y: none;
-    
 }
 .bottom-right-triangle{
     position: fixed;
@@ -40,8 +37,23 @@ body{
     bottom: 0px;
     transform: scale(.7);
     transform-origin: bottom right;
-    overscroll-behavior-y: none;
-    
+}
+
+.top-triangle-shift{
+    transform: translateX(-50%) translateY(-80px);
+}
+
+.top-triangle-shift-contact{
+    transform: translateX(-50%) translateY(-120px);
+}
+
+.left-triangle-shift{
+    transform: scale(.4);
+}
+
+.right-triangle-shift{
+    transform: scale(.4);
+
 }
 
 nav{
@@ -83,9 +95,12 @@ nav li:hover{
     cursor: pointer;
 }
 
-.container-title{
+.container{
     width: 100%;
     height: 100vh;
+}
+
+.container-title{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,11 +114,43 @@ nav li:hover{
 
 .container-about{
     position: relative;
-    width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: space-between;
     align-items: top;
+}
+
+.container-portfolio{
+    display: grid;
+    padding: 8% 6% 6% 6%;
+    grid-template-rows: 1fr 1fr ;
+    grid-template-columns: 7% 1fr 1fr 1fr 7%;
+}
+
+.container-portfolio h2{
+    padding-top: 150px;
+    justify-self: center;
+}
+
+.container-contact {
+    position: relative;
+
+}
+.container-contact img{
+    position: absolute;
+    overflow: hidden;
+    bottom: 34%;
+    width: 100%;
+    object-fit: cover;
+    transform: translate(0%);
+    transform-origin: bottom;
+}
+
+.contact-background-fill{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 34%;
+    background-color: black;
 }
 
 .about-left{
@@ -121,8 +168,33 @@ nav li:hover{
     bottom: 100px;
     left: 50%;
     transform: translate(-50%);
-
 }
+
+.box{
+    justify-self: center;
+    align-self: center;
+    height: 200px;
+    width: 200px;
+    background-color: grey;
+    border-radius: 15px;
+}
+
+.box1{
+    justify-self: start;
+    grid-column: 1 / span 2;
+}
+.box2{
+    justify-self: end;
+    grid-column: 4 / span 2;
+}
+.box3{
+    grid-column: 2/3;
+}
+.box4{
+    align-self: flex-end;
+}
+
+
 
 
 
