--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,6 +5,7 @@
 }
 
 body{
+    position: absolute;
     overscroll-behavior-y: none;
     font-family: 'Poppins', sans-serif;
 }
@@ -77,7 +78,7 @@ body{
     transform: scale(.7);
     transform-origin: bottom right;
     transition: .7s ease-in-out;
-    z-index: 3;
+    z-index: 10;
 }
 
 .right-triangle-shift{
@@ -186,6 +187,25 @@ nav li:hover{
     cursor: pointer;
 }
 
+.fab{
+    color: white;
+    margin-right: 1rem;
+    font-size: 2rem;
+
+}
+
+.fab:hover{
+    color: gray;
+}
+
+.web-links{
+    position: fixed;
+    left: 10%;
+    bottom: 20px;
+    height: 50px;
+    bottom: 20px;
+}
+
 .container{
     width: 100%;
     height: 100vh;
@@ -193,6 +213,7 @@ nav li:hover{
 
 .container-title{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -200,7 +221,11 @@ nav li:hover{
 .container-title h1{
     font-size: 4.5rem;
     font-family: 'Poppins', sans-serif;
-    transform: translateY(0px) translateX(-9px);
+    transform: translateY(15px) translateX(-9px);
+}
+
+.container-title h2{
+    transform: translateY(20px);
 }
 
 .container-about{
@@ -224,6 +249,9 @@ nav li:hover{
 
 .container-contact {
     position: relative;
+    /* min-width: 1200px; */
+    overflow-x: hidden;
+    overflow: hidden;
 
 }
 .container-contact img{
@@ -240,17 +268,33 @@ nav li:hover{
     position: absolute;
     bottom: 0px;
     width: 100%;
-    height: 34%;
+    height: 35%;
     background-color: black;
 }
 
 .about-left{
     padding: 5rem 15rem 3rem 2rem;
+    width: 140%;
+    min-width: 560px;
 }
 
 .about-right{
-    padding: 5rem 5rem 3rem 0rem;
+    padding: 5rem 2rem 3rem 0rem;
+    width: 100%;
 }
+
+.skill-grid{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.skill-grid i{
+    margin: 1rem;
+}
+
+.skill-grid .fab{
+    color: black;
+} 
 
 .about-img{
     position: absolute;
@@ -381,6 +425,10 @@ nav li:hover{
     transition: .2s ease-in-out;
 }
 
+.contact-header-mobile{
+    display: none;
+}
+
 #btn-submit:hover{
     background-color: #e4e4e4;
     color: black;
@@ -397,6 +445,111 @@ nav li:hover{
 
     .burger{
         display: initial;
+    }
+
+}
+
+@media only screen and (max-width: 760px) {
+
+    .container{
+        min-height: -webkit-fill-available;
+    }
+
+    .top-triangle{
+        transform: translateX(-50%) translateY(-250px);
+    }
+
+    .bottom-left-triangle, .bottom-right-triangle{
+        transform: scale(.1);
+    }
+
+    .side-nav-container{
+        transform: translateX(100%) ;
+        height: 100%;
+        width: 88%;
+        
+    }
+
+    .side-nav-active{
+        transform: translateX(0px) ;
+        
+    }
+
+    .container-title{
+        text-align: center;
+    }
+
+    .container-about{
+        flex-wrap: wrap;
+    }
+
+    .container-about img{
+        display: none;
+    }
+
+    .about-left{
+        padding: 1rem;
+    }
+
+    .about-right{
+        padding: 1rem;
+    }
+
+
+
+    .container-portfolio{
+        display: flex;
+        flex-direction: column;
+        overflow: scroll;
+    }
+
+    .box{
+        margin: 1rem 0rem;
+        position: relative;
+        justify-self: center;
+        align-self: center;
+        height: auto;
+        width: 75%;
+        background-color: grey;
+        border-radius: 15px;
+    }
+    
+    .portfolio-header{
+        display: none;
+    }
+    .box-planner{
+        
+    }
+    .box-password{
+        
+    }
+    .box-hatcher{
+        
+    }
+    .box-strtup{
+        
+    }
+
+    .container-contact img{
+        display: none;
+    }
+
+    .contact-header-mobile{
+        margin: 2rem;
+        display: block;
+        color: white;
+        text-align: center;
+    }
+
+    .contact-background-fill{
+        height: 70%;
+    }
+
+    .contact-form{
+        position: absolute;
+        bottom: 5f0px;
+        left: 40%;
+        transform: translateX(-100%);
     }
 }
 
