--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -18,6 +18,24 @@ body{
 
 /* end utility section */
 
+.video-background{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+    opacity: .1;
+    z-index: -5;
+    transform: translateX(-50%);
+    animation: fader 17s ease-in-out infinite;
+    animation-direction: alternate;
+    
+}
+
+@keyframes fader {
+    from {opacity: .0;}
+    to {opacity: .05;}
+  }
 
 .burger{
     display: none;
