--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -23,19 +23,19 @@ body{
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 100vh;
-    opacity: .1;
+    height: 100%;
+    opacity: .03;
     z-index: -5;
-    transform: translateX(-50%);
-    animation: fader 17s ease-in-out infinite;
-    animation-direction: alternate;
+    margin: 0px;
+    min-height: -webkit-fill-available;
     
 }
 
-@keyframes fader {
-    from {opacity: .0;}
-    to {opacity: .05;}
-  }
+.video-background video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
 
 .burger{
     display: none;
@@ -291,7 +291,7 @@ nav li:hover{
 }
 
 .about-left{
-    padding: 5rem 15rem 3rem 2rem;
+    padding: 5rem 15rem 3rem 3rem;
     width: 140%;
     min-width: 560px;
 }
